Updated HTML & CSS Files

--- a/html/about.html
+++ b/html/about.html
@@ -25,39 +25,10 @@
         </div>
         </div>
     </nav>
-<section class="hero__section">
-    <div class="hero__block">
-    <div class="text__container">
-        <div class="hero__text">
-            <h1 class="hero__heading">MEET NICK SEO.</h1>
-            <p class="hero__description">Aspiring UX/UI Designer</p>
-            <p class="hero__description">Researcher</p>
-            <p class="hero__description">User Advocate</p>
-            <p class="hero__description">Creative Thinker</p>
-    <div class="hero__button">
-        <button><a href="about.html">More About Me</a></button>
-    </div>
-    </div>
-    </div>
-    
-    <div class="image__container">
-        <div class="hero__image">
-            <img src="/images/mypic_1 copy.png" width="251px" height="657px">
-        </div>
-        </div>
-        </div>
-</section>
 
-<section class="love__design">
+<section class="UX__skills">
     <div class="section__container">
-        <div class="section__heading">
-            <h1>Why I Love Design</h1>
-        </div>
-        <div class="section__text">
-            <p>It can universally affect everyone regardless of their gender, skin color, religion, orientation, or background. <br> It has the ability to evoke a wide range of feelings and emotions in people all over the world, <br>a humbling reminder of our humanity. No matter what form it takes, design is ever-changing and evolving,<br> affording us the opportunities to learn and grow.</p>
-        </div>
-        <div class="design__logo">
-            <img src="/images/designicon.svg" height="400px" width="400px">
+
         </div>
     </div>
 </section>
