--- a/html/casestudy_1.html
+++ b/html/casestudy_1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nick's Portfolio Site</title>
+    <title>Case Study</title>
 </head>
 <body>
     <nav class="nav__container">
@@ -35,7 +35,7 @@
             <p class="hero__description">User Advocate</p>
             <p class="hero__description">Creative Thinker</p>
     <div class="hero__button">
-        <button><a href="about.html">More About Me</a></button>
+        <button>More About Me</button>
     </div>
     </div>
     </div>
